--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,3 +22,13 @@ jobs:
 
       - name: Build with Maven
         run: mvn clean install
+
+      - name: Build and push Docker Image
+        uses: mr-smithers-excellent/docker-build-push@v5
+        with:
+          image: sankalpcb007/springdeploy
+          registry: docker.io
+          dockerfile: Dockerfile
+          username: ${{secrets.DOCKER_USERNAME}}
+          password: ${{secrets.DOCKER_PASSWORD}}
+
