--- a/pom.xml
+++ b/pom.xml
@@ -86,6 +86,7 @@
                 </configuration>
             </plugin>
         </plugins>
+        <finalName>springdeploy</finalName>
     </build>
 
 </project>
